[gd_scene load_steps=14 format=2]

[ext_resource path="res://magma_monster.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/Slime/death1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Slime/death2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/Slime/walk1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/Slime/walk2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/Slime/walk3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Slime/walk4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemies/Slime/walk5.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemies/Slime/walk6.png" type="Texture" id=9]
[ext_resource path="res://magma_monster_area.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.72632
height = 4.90115

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.88035
height = 4.2393

[node name="magma_monster_body" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision/safe_margin = 0.01
script = ExtResource( 1 )

[node name="magma_monster_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "dead"
playing = true
centered = false

[node name="magma_monster_shape" type="CollisionShape2D" parent="."]
position = Vector2( 15.6712, 11.2175 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="magma_monster_RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 25, 10.2259 )
enabled = true
cast_to = Vector2( 0, 13 )

[node name="magma_monster_area" type="Area2D" parent="."]
script = ExtResource( 10 )

[node name="magma_monster_area_shape" type="CollisionShape2D" parent="magma_monster_area"]
position = Vector2( 15, 10.2259 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="magma_monster_area" to="magma_monster_area" method="_on_magma_monster_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
